# findnerd

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
LICENSES/: model2vec.txt  nerd-fonts.txt
scripts/: build_index.py
src/: catalog.rs  category_flags.rs  cli.rs  main.rs  model_cache.rs  output.rs  search.rs  semantic.rs  tui.rs
tests/: cli.rs
